--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,29 +6,29 @@ website:
   navbar:
     background: primary
     left:
-      - href: setup.html
+      - href: setup.md
       - text: "Set-up"
         menu:
         - text: "Register a free GitHub account"
-          href: notebooks/Register_for_github_account.html
+          href: notebooks/Register_for_github_account.md
         - text: "Install git"
-          href: notebooks/Install_git.html
+          href: notebooks/Install_git.md
         - text: "Setup git credentials"
-          href: notebooks/Connections.html
+          href: notebooks/Connections.md
         - text: "Install/update R and RStudio"
-          href: notebooks/Install_or_update_R_RStudio.html
+          href: notebooks/Install_or_update_R_RStudio.md
       - text: "Git for version control"
         menu:
         - text: "Presentation"
           href: "https://unisyd.sharepoint.com/:p:/r/teams/SydneyInformaticsHub2/_layouts/15/Doc.aspx?sourcedoc=%7BA2B9FBEB-02BA-4410-A516-A4B81F449F29%7D&file=Rstudio%20and%20github.pptx&action=edit&mobileredirect=true"
         - text: "Check prerequisites"
-          href: notebooks/On_the_day_check_prerequisites.html
+          href: notebooks/On_the_day_check_prerequisites.md
         - text: "Create a test repo in github"
-          href: notebooks/On_the_day_create_a_test_repo.html
+          href: notebooks/On_the_day_create_a_test_repo.md
         - text: "Clone the test repo to your computer using RStudio"
-          href: notebooks/On_the_day_clone_the_repo_using_RStudio.html
+          href: notebooks/On_the_day_clone_the_repo_using_RStudio.md
         - text: "Create a Rmarkdown file locally and push changes to github using RStudio"
-          href: notebooks/On_the_day_create_Rmarkdown_make_commit_changes_using_RStudio.html
+          href: notebooks/On_the_day_create_Rmarkdown_make_commit_changes_using_RStudio.md
 
   body-footer: "All materials copyright Sydney Informatics Hub, University of Sydney"
 
