--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
     left:
       - text: "Set-up"
         menu:
-        - text: "Register a Setup GitHub account"
+        - text: "Register a GitHub account" 
           href: notebooks/Register_for_github_account.md
         - text: "Install git"
           href: notebooks/Install_git.md
